--- a/src/UI/Card.scss
+++ b/src/UI/Card.scss
@@ -1,5 +1,5 @@
-@import '../components/Abstracts/Variables.scss';
+@import "../components/Abstracts/Variables.scss";
 
-.cards{
-    perspective: $perspective_value;
+.cards {
+  perspective: $perspective_value;
 }
