--- a/src/components/Abstracts/Mixins.scss
+++ b/src/components/Abstracts/Mixins.scss
@@ -1,59 +1,59 @@
-@import './Variables.scss';
+@import "./Variables.scss";
 
-@mixin button-styles{
-    &,
-    &:link,
-    &:visited {
-        // text-transform: uppercase;
-        text-decoration: none;
-        color: $color-white;
-        font-size: 1.3rem;
-        font-weight: 500;
-        font-family: $font-tertiary;
-        padding: 1rem 2rem;
-        // display: inline-block;
-        border-radius: 10rem;
-        transition: all .2s; //
-        // position: relative; //
-        border: none;
-        cursor: pointer;  
-        user-select: none;
-    }
+@mixin button-styles {
+  &,
+  &:link,
+  &:visited {
+    text-decoration: none;
+    color: $color-white;
+    font-size: 1.3rem;
+    font-weight: 500;
+    font-family: $font-tertiary;
+    padding: 1rem 2rem;
+    border-radius: 10rem;
+    transition: all 0.2s;
+    border: none;
+    cursor: pointer;
+    user-select: none;
+  }
 
-    &:hover {
-        transform: translateY(-3px);
-        // box-shadow: 0 1rem 1.5rem rgba($color-white, .4);
-        box-shadow: 0 0.5rem 1rem rgba($color-white, .4);
+  &:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 0.5rem 1rem rgba($color-white, 0.4);
+    perspective: $perspective_value;
+  }
 
-        perspective: $perspective_value;
-
-        // &::after {
-        //     transform: scaleX(1.4) scaleY(1.6);
-        //     opacity: 0;
-        // }
-    }
-
-    &:active,
-    &:focus {
-        outline: none;
-        transform: translateY(-1px);
-        box-shadow: 0 0.3rem 0.7rem rgba($color-white, .4);
-        perspective: $perspective_value;
-    }
+  &:active,
+  &:focus {
+    outline: none;
+    transform: translateY(-1px);
+    box-shadow: 0 0.3rem 0.7rem rgba($color-white, 0.4);
+    perspective: $perspective_value;
+  }
 }
 
-
 @mixin respond($breakpoint) {
-    @if $breakpoint == phone {
-        @media only screen and (max-width: 37.5em) { @content };    //600px
-    }
-    @if $breakpoint == tab-port {
-        @media only screen and (max-width: 56.25em) { @content };     //900px
-    }
-    @if $breakpoint == tab-land {
-        @media only screen and (max-width: 75em) { @content };    //1200px
-    }
-    @if $breakpoint == big-desktop {
-        @media only screen and (min-width: 112.5em) { @content };    //1800
-    }
+  @if $breakpoint ==phone {
+    @media only screen and (max-width: 37.5em) {
+      @content;
+    } //600px
+  }
+
+  @if $breakpoint ==tab-port {
+    @media only screen and (max-width: 56.25em) {
+      @content;
+    } //900px
+  }
+
+  @if $breakpoint ==tab-land {
+    @media only screen and (max-width: 75em) {
+      @content;
+    } //1200px
+  }
+
+  @if $breakpoint ==big-desktop {
+    @media only screen and (min-width: 112.5em) {
+      @content;
+    } //1800
+  }
 }
