--- a/src/components/Header/Hello.scss
+++ b/src/components/Header/Hello.scss
@@ -1,75 +1,54 @@
-@import '../Abstracts/Variables.scss';
-@import '../Abstracts/Animations.scss';
-@import '../Abstracts/Mixins.scss';
+@import "../Abstracts/Variables.scss";
+@import "../Abstracts/Animations.scss";
+@import "../Abstracts/Mixins.scss";
 
 .welcomeScreen {
-    // grid-column: 5/-1;
-    // grid-row: 2/3;
-    width: 57vw;
-    height: 40vw;
-    // height: 100%;
-    position: relative;
-    // display: grid;
-    // grid-template-rows: $header-height repeat(4, 1fr);
-    // grid-template-columns: repeat(7,1fr);
-    // align-items: center;
-    // justify-content: center;
-    // background-color: rgba(255, 255, 0, 0.226);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 57vw;
+  height: 40vw;
 
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  @include respond(phone) {
+    width: 100vw;
+  }
+
+  &-Hello {
+    width: min-content;
+    line-height: 1;
+    letter-spacing: 1vw;
+    font-family: $font-bold-curve;
+    font-weight: 700;
+    font-size: 23vw;
+    animation-name: scaleUP;
+    animation-duration: 1.2s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
     @include respond(phone) {
-        width: 100vw;
+      font-size: 30vw;
     }
+  }
 
+  &-Message {
+    color: #f5f5f5cf;
+    font-weight: 700;
+    height: 60%;
+    max-height: 20rem;
+    width: 60%;
 
-    &-Hello {
-        // background-color: green;
-        // width: 6vw;
-        // height: 100%;
-        // font-size: 20vw;
-        // transform: scaleX()
-        // top: 70%;
-        // grid-row: 2/-1;
-        // grid-column: 1/-1;
-        width: min-content;
-        line-height: 1;
-        letter-spacing: 1vw;
-        font-family: $font-bold-curve;
-        font-weight: 700;
-        font-size: 23vw;
-        animation-name: scaleUP;
-        animation-duration: 1.2s; //
-        animation-timing-function: ease-out;
-        animation-fill-mode: forwards;
-        @include respond(phone) {
-            font-size: 30vw;
-        }    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 5rem;
+    font-family: $font-bold-curve;
+    letter-spacing: 1.5px;
+
+    @include respond("phone") {
+      font-size: 3rem;
     }
-
-    &-Message {
-        //  grid-row: 4/5;
-        //  grid-column: 3/7;
-        // background-color: blueviolet;
-        color: #f5f5f5cf;
-        font-weight: 700;
-        height: 60%;
-        max-height: 20rem;
-        width: 60%;
-        // display: inline-block;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 5rem;
-        font-family: $font-bold-curve;
-        letter-spacing: 1.5px;
-
-        @include respond("phone"){
-            font-size: 3rem;
-        }
-
-    }
-
+  }
 }
