--- a/src/UI/Modal.scss
+++ b/src/UI/Modal.scss
@@ -1,32 +1,23 @@
-@import '../components/Abstracts/Animations.scss';
+@import "../components/Abstracts/Animations.scss";
 
 .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 20;
-    background-color: rgba(0, 0, 0, 0.75);
-  }
-  
-  .modal {
-    position: fixed;
-    top: 48vh;
-    left: 50vw;
-    // width: 90%;
-    // background-color: red;
-    padding: 1rem;
-    border-radius: 14px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-    z-index: 30;
-    animation: slide-down 0.7s ease-out forwards;
-  }
-  
-//   @media (min-width: 768px) {
-//     .modal {
-//       width: 40rem;
-//       left: calc(50% - 20rem);
-//     }
-//   }
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 20;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.modal {
+  position: fixed;
+  top: 48vh;
+  left: 50vw;
+
+  padding: 1rem;
+  border-radius: 14px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  z-index: 30;
+  animation: slide-down 0.7s ease-out forwards;
+}
