--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -2,17 +2,14 @@
 @import '../Abstracts/Mixins.scss';
 
 
-.aboutMe{
+.aboutMe {
     grid-column: 1/-1;
     grid-row: 2/3;
     display: grid;
-    // grid-template-columns: repeat(3,1fr);
     grid-template-rows: $header-height max-content max-content $footer-height;
-    // grid-auto-flow: column;
-    // background-color: red;
     width: 100vw;
 
-    &_Title{
+    &_Title {
         grid-column: 1/-1;
         grid-row: 1/2;
         justify-self: center;
@@ -21,139 +18,119 @@
         color: $color-tertiary;
     }
 
-    &_Options{
-        // background-color: red;
+    &_Options {
         font-family: $font-tertiary;
         grid-row: 2/3;
-        // grid-column: 1/-1;
-        // display: grid;
         display: grid;
         grid-template-columns: 1fr 2fr 1fr;
         align-items: center;
         justify-items: center;
-        // justify-content: space-around;
-        // justify-self: center;
-        // margin: 3rem;
 
-        @include respond(phone){
+        @include respond(phone) {
             grid-template-columns: 1fr 2fr;
         }
 
 
-        &-text{
+        &-text {
             grid-column: 1/2;
             font-size: 1.3rem;
 
-            @include respond(phone){
+            @include respond(phone) {
                 visibility: hidden;
             }
-            // align-self: center;
         }
 
-        &-select{
+        &-select {
             grid-column: 2/3;
-            // display: flex;
             position: relative;
-            // background-color: red;
             width: 360px;
             height: 100px;
-            @include respond(phone){
+
+            @include respond(phone) {
                 grid-column: 1/3;
-        
             }
         }
 
-        &_All{
+        &_All {
             display: flex;
-            // background-color: aqua;
             z-index: 10;
             position: absolute;
-            top : 0;
-            left : 0;
+            top: 0;
+            left: 0;
             width: 360px;
             height: 100px;
             justify-content: space-around;
             align-items: center;
-            // justify-items: center;
 
-            & button{
-                // color: $color-secondary;
-                // font-size: 16px;
-                // font-family: $font-secondary;
-                // font-weight: 700;
+            & button {
                 background-color: transparent;
-                // border: none;
                 border-style: solid;
                 border-width: 3px;
                 border-color: #ff4d00a9;
                 width: 28px;
-                height:  28px;
-                // text-align: center;
+                height: 28px;
                 z-index: 10;
-                // text-shadow:2rem;
                 cursor: pointer;
                 border-radius: 20px;
                 display: grid;
                 justify-content: center;
                 align-content: center;
-                // margin: auto auto;
-
-                // & span{
-                //     background-color: transparent;
-                // }
             }
         }
-        &-B{
+
+        &-B {
             background-color: $color-secondary;
             width: 6px;
             height: 6px;
             border-radius: 50%;
         }
-        &-C{
+
+        &-C {
             background-color: $color-secondary;
             width: 9px;
             height: 9px;
             border-radius: 50%;
         }
-        &-D{
+
+        &-D {
             background-color: $color-secondary;
             width: 12px;
             height: 12px;
             border-radius: 50%;
         }
 
-        &-name{
+        &-name {
             display: flex;
             justify-content: space-around;
             transform: translateY(-14px);
-            // position: absolute;
-            & span{
+
+            & span {
                 width: 80px;
                 text-align: center;
                 font-size: 1.6rem;
                 font-weight: 600;
-                // background-color: red;
+
             }
         }
     }
 
-    
-    &_Resume-Details{
-        // grid-column: 1/-1;
+
+    &_Resume-Details {
+
         grid-row: 3/4;
         align-content: start;
-        // background-color: palegreen;
-        display: grid;
-        grid-template-columns: repeat(3,1fr) 7fr repeat(3,1fr);
 
-        @include respond(phone){
-            grid-template-columns: 0.5fr max-content 0.5fr 7fr 1fr;    
+        display: grid;
+        grid-template-columns: repeat(3, 1fr) 7fr repeat(3, 1fr);
+
+        @include respond(phone) {
+            grid-template-columns: 0.5fr max-content 0.5fr 7fr 1fr;
         }
 
     }
-    
-    &_Resume{
-        // background-color: blue;
+
+    &_Resume {
+
         margin-top: 7rem;
         grid-column: 2/3;
         display: flex;
@@ -161,26 +138,26 @@
         flex-direction: column;
 
 
-        // width: 60px;
-        // align-self: center;
-        // margin-bottom: 8rem;
-        // margin-top: 3rem;
-        // justify-self: center;
-        // display: block;
-        // margin: auto;
-        // display: grid;
-        // justify-content: center;  
+
+
+
+
+
+
+
+
+
     }
 
-    &_details{
+    &_details {
         grid-column: 4/5;
         background: $blue-gradient-right;
         padding: 15px;
         border-radius: 15px;
         margin-top: 7rem;
-        // margin-bottom: 10rem;
-        // font-family: $font-primary;
+
+
         font-size: 1.5rem;
-        // background-color: red;
+
     }
 }
