--- a/src/components/Abstracts/Animations.scss
+++ b/src/components/Abstracts/Animations.scss
@@ -1,60 +1,52 @@
-@import './Variables.scss';
+@import "./Variables.scss";
 
 @keyframes scaleUP {
-    0% {
-        color: rgba($color: $color-white, $alpha: 0);
-       transform: scaleY(0.3) scaleX(0.3) translateY(2.2vw);
-    }
+  0% {
+    color: rgba($color: $color-white, $alpha: 0);
+    transform: scaleY(0.3) scaleX(0.3) translateY(2.2vw);
+  }
 
-    50%{
-        color: rgba($color: $color-white, $alpha: 0.1);
-        transform: scaleY(1) scaleX(1) translateY(2.2vw);
-    }
-    
-    100% {
-        transform: scaleY(1.8) translateY(2.2vw);
-        color: rgba($color: $color-white, $alpha: 0.1); 
-    }
+  50% {
+    color: rgba($color: $color-white, $alpha: 0.1);
+    transform: scaleY(1) scaleX(1) translateY(2.2vw);
+  }
+
+  100% {
+    transform: scaleY(1.8) translateY(2.2vw);
+    color: rgba($color: $color-white, $alpha: 0.1);
+  }
 }
 
-
 @keyframes slide-down {
-    from {
-      opacity: 0;
-      transform: translateY(-7rem);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
+  from {
+    opacity: 0;
+    transform: translateY(-7rem);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 @keyframes slide-NavLinks {
-    0% {
-      opacity: 0;
-      transform: translate(-80%,-50%);
-    }
-    30% {
-      opacity: 0;
-      transform: translate(-80%,-50%);
-    }
-    90% {
-      opacity: 1;
-      transform: translate(-45%,-50%);
-    }
-    100% {
-      opacity: 1;
-      transform: translate(-50%,-50%);
-    }
+  0% {
+    opacity: 0;
+    transform: translate(-80%, -50%);
+  }
+
+  30% {
+    opacity: 0;
+    transform: translate(-80%, -50%);
+  }
+
+  90% {
+    opacity: 1;
+    transform: translate(-45%, -50%);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
 }
-
-
-// @keyframes rotate-animation{
-//     from {
-//         background: conic-gradient($color-secondary-light,$color-secondary,$color-secondary 60%,$color-primary 60%,$color-primary);
-//     }
-
-//     to {
-//         background: conic-gradient($color-secondary-light,$color-secondary,$color-secondary 90%,$color-primary 90%,$color-primary);
-//     }
-// }
