--- a/src/components/Certificates/Certificates.scss
+++ b/src/components/Certificates/Certificates.scss
@@ -1,115 +1,86 @@
-@import '../Abstracts/Variables.scss';
+@import "../Abstracts/Variables.scss";
 
-.certificates{
+.certificates {
+  grid-row: 6/7;
+  grid-column: 1/-1;
+  display: grid;
+  grid-template-rows: $header-height 1fr $footer-height;
+  grid-template-columns: 1fr 10fr 1fr;
 
-    grid-row: 6/7;
+  position: relative;
+
+  &-Title {
     grid-column: 1/-1;
+    grid-row: 1/2;
+    justify-self: center;
+    font-family: $font-secondary;
+    font-size: $Title;
+    color: $color-tertiary;
+  }
+
+  &-All {
+    grid-row: 2/3;
+    grid-column: 2/3;
     display: grid;
-    grid-template-rows: $header-height 1fr $footer-height;
-    grid-template-columns: 1fr 10fr 1fr;
-    // background-color: red;
-    position: relative;
-    // grid-template-columns: 2fr 1fr;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
 
-    &-Title{
-        // background-color: red;
-        grid-column: 1/-1;
-        grid-row: 1/2;
-        justify-self: center;
-        font-family: $font-secondary;
-        font-size: $Title;
-        color: $color-tertiary;
+  &-Each {
+    width: 85%;
+
+    border-color: $color-secondary-light;
+    border-width: 0.4rem;
+    border-style: solid;
+    border-radius: 2rem;
+    transition: all 0.5s;
+
+    &:hover {
+      padding: 5px;
+      transform: scale(1.3);
+      cursor: pointer;
+    }
+  }
+
+  &-Box {
+    border-color: $color-grey-dark;
+
+    height: fit-content;
+
+    text-align: center;
+
+    &:hover {
+      z-index: 10;
     }
 
-    &-All{
-        grid-row: 2/3;
-        grid-column: 2/3;
-        display: grid;
-        grid-template-columns: repeat(6,1fr);
-        grid-template-rows: repeat(3,1fr);
+    &_1 {
+      grid-row: 1/3;
+      grid-column: 1/3;
+      z-index: 1;
     }
 
-    &-Each{
-        width: 85%;
-        // text-align: center;
-        // justify-self: center;
-        border-color: $color-secondary-light;
-        border-width: 0.4rem;
-        border-style:solid;
-        border-radius: 2rem;
-        transition: all 0.5s;
-        // box-sizing:content-box;
-        &:hover{
-            padding: 5px;
-            transform: scale(1.3);
-            cursor: pointer;
-            // z-index: 10;
-            // border-color: ;
-            // border-width: 0.4rem;
-            // border-style:solid;
-            // border: none;
-            // background: $orange-gradient-bottom-right;
-            
-        }
+    &_2 {
+      grid-row: 1/3;
+      grid-column: 3/5;
+      z-index: 3;
     }
 
-    &-Box{
-        border-color: $color-grey-dark;
-        // background-color: red;
-        // width:fit-content;
-        height: fit-content;
-        // border-width: 2px;
-        // border-style:solid;
-        text-align: center;
-        // justify-items: center;
-
-        &:hover{
-            z-index: 10;
-        }
-
-        &_1{
-            grid-row: 1/3;
-            grid-column: 1/3;
-            z-index: 1;
-            // &:hover{
-            //     z-index: 3;
-            // }
-            // background-color: red;
-        }
-        &_2{
-            grid-row: 1/3;
-            grid-column: 3/5;
-            z-index: 3;
-            // &:hover{
-            //     z-index: 5;
-            // }
-        }
-        &_3{
-            grid-row: 1/3;
-            grid-column: 5/7;
-            z-index: 5;
-            // &:hover{
-            //     z-index: 7;
-            // }
-        }
-        &_4{
-            grid-row: 2/4;
-            grid-column: 2/4;
-            z-index: 2;
-            // &:hover{
-            //     z-index: 4;
-            // }
-        }
-        &_5{
-            grid-row: 2/4;
-            grid-column: 4/6;
-            z-index: 4;
-            // &:hover{
-            //     z-index: 6;
-            // }
-        }
-
-
+    &_3 {
+      grid-row: 1/3;
+      grid-column: 5/7;
+      z-index: 5;
     }
+
+    &_4 {
+      grid-row: 2/4;
+      grid-column: 2/4;
+      z-index: 2;
+    }
+
+    &_5 {
+      grid-row: 2/4;
+      grid-column: 4/6;
+      z-index: 4;
+    }
+  }
 }
-
