--- a/src/components/Header/Photo.scss
+++ b/src/components/Header/Photo.scss
@@ -1,39 +1,23 @@
 @import "../Abstracts/Variables.scss";
-@import '../Abstracts/Mixins.scss';
+@import "../Abstracts/Mixins.scss";
 
-.myPhoto{
-    // grid-column: 1 / 5;
-    // background-color: red;
-    // display: flex;
-    // flex-direction: column;
-    // justify-content:center;
-    // align-items: center;
-    // grid-row: 1/-1;
-    // background-color: blue;
-    width: 40vw;
+.myPhoto {
+  width: 40vw;
 
-    // display: grid;
-    // grid-template-rows: $header-height 1fr;
-    display: flex;
-    justify-content: center;
-    align-content: center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 
-    @include respond(phone){
-        width: 100vw;
-    }
-    
-    
-    & img{
-        grid-row: 2/-1;
-        width : 60%;
-        // justify-self: center;
-        // align-self: center;
-        // text-align: center;
-        border-radius: 2rem;
-        perspective: $perspective_value;
-        box-shadow: 0.8rem 0.8rem 2rem rgba(30, 34, 72, 0.995);
+  @include respond(phone) {
+    width: 100vw;
+  }
 
-    }
+  & img {
+    grid-row: 2/-1;
+    width: 60%;
 
+    border-radius: 2rem;
+    perspective: $perspective_value;
+    box-shadow: 0.8rem 0.8rem 2rem rgba(30, 34, 72, 0.995);
+  }
 }
-
