--- a/src/components/LanguageKnown/EachLanguage.scss
+++ b/src/components/LanguageKnown/EachLanguage.scss
@@ -1,97 +1,70 @@
-@import '../Abstracts/Variables.scss';
-@import '../Abstracts/Mixins.scss';
+@import "../Abstracts/Variables.scss";
+@import "../Abstracts/Mixins.scss";
 
-.eachLanguage{
-    // background-color: red;
+.eachLanguage {
+  grid-column: 2/3;
+
+  margin: 2rem 0rem;
+  height: 80%;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: max-content 1fr;
+  position: relative;
+
+  &-Logo {
+    grid-column: 1/2;
+    grid-row: 1/3;
+    width: 6rem;
+    align-self: center;
+
+    margin: 0 3rem;
+
+    @include respond(phone) {
+      margin: 0 1rem;
+    }
+  }
+
+  &-Name-Percentage {
+    grid-row: 1/2;
     grid-column: 2/3;
-    // width: minmax(80%,90%);
-    // min-width: 50rem;
-    // max-width: 70%;
-    // width: 100%;
-    margin: 2rem 0rem;
-    height: 80%;
     display: grid;
-    grid-template-rows: 1fr 1fr;
     grid-template-columns: max-content 1fr;
-    position: relative;
+  }
 
-    // z-index: 5;
+  &-Name {
+    grid-column: 1/2;
+    margin-right: 1rem;
+    align-self: center;
+    font-size: 1.6rem;
+    font-weight: 700;
+  }
 
-    &-Logo{
-        grid-column: 1/2;
-        grid-row: 1/3;
-        width: 6rem;
-        align-self:center;
-        // padding: 10px;
-        margin: 0 3rem;
+  &-Percentage {
+    height: 3rem;
 
-        @include respond(phone){
-            margin: 0 1rem;    
-        }
-        // background-color: aqua;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+
+    transform: translate(2rem, -1.5rem);
+  }
+
+  &-Bar {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    align-self: self-start;
+    border-radius: 100px;
+    height: 2rem;
+
+    border-color: $border-color_value;
+    border-style: solid;
+    border-width: 3px;
+
+    &-Fill {
+      height: 100%;
+      border-radius: 100px;
+      background: $orange-gradient-right;
+      position: relative;
     }
-
-    &-Name-Percentage{
-        grid-row: 1/2;
-        grid-column: 2/3;
-        display: grid;
-        grid-template-columns: max-content 1fr;
-        // background-color: firebrick;
-    }
-
-    &-Name{
-        grid-column: 1/2;
-        margin-right: 1rem;
-        align-self: center;
-        font-size: 1.6rem;
-        font-weight: 700;
-    }
-
-    &-Percentage{
-        // background-color: azure;
-        // grid-column: 2/3;
-        // grid-row: 1/2;
-        height :3rem;
-        // width: 100%;
-        // width:200px;
-        // align-self: self-end;
-        // justify-self: start;
-        // justify-self: end;
-        // justify-self:flex-start;
-        // transform: translateX(calc(90%-1px));
-        // height: 50%;
-        // align-self:self-end;
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        // top: 0;
-        // margin-left: -20;
-        // animation-fill-mode: forwards;
-        transform: translate(2rem,-1.5rem);
-    }
-    
-    &-Bar{
-        grid-column: 2/3;
-        grid-row: 2/3;
-        align-self:self-start;
-        border-radius: 100px;
-        height: 2rem;
-        // width: 70rem;
-        border-color: $border-color_value;
-        border-style: solid;
-        border-width: 3px;
-        // box-shadow: ;
-        // box-shadow: 0 0 50 20 rgba(255, 255, 255, 1);
-        // border-color: green;
-        // overflow: hidden;
-
-        &-Fill{
-            height: 100%;
-            border-radius: 100px;
-            background : $orange-gradient-right;
-            position: relative;
-        }
-    }
-
-    
+  }
 }
