--- a/src/components/LanguageKnown/LanguageKnown.scss
+++ b/src/components/LanguageKnown/LanguageKnown.scss
@@ -1,25 +1,22 @@
-@import '../Abstracts/Variables.scss';
-@import '../Abstracts/Mixins.scss';
+@import "../Abstracts/Variables.scss";
+@import "../Abstracts/Mixins.scss";
 
-.languageKnown{
+.languageKnown {
+  grid-column: 1/-1;
+  grid-row: 3/4;
+  display: grid;
+  grid-template-rows: $header-height repeat(5, 1fr) $footer-height;
+  grid-template-columns: 1fr minmax(70rem, 70vw) 3fr;
+  @include respond(phone) {
+    grid-template-columns: 1fr 93vw 1fr;
+  }
+
+  &-Title {
     grid-column: 1/-1;
-    grid-row: 3/4;
-    display: grid;
-    grid-template-rows: $header-height repeat(5,1fr) $footer-height;
-    grid-template-columns: 1fr minmax(70rem,70vw) 3fr;
-    @include respond(phone){
-        grid-template-columns: 1fr 93vw 1fr;
-    }
-    // background-color: blue;
-    // height: 1vh;
-
-    &-Title{
-        // background-color: red;
-        grid-column: 1/-1;
-        grid-row: 1/2;
-        justify-self: center;
-        font-family: $font-secondary;
-        font-size: $Title;
-        color: $color-tertiary;
-    }
+    grid-row: 1/2;
+    justify-self: center;
+    font-family: $font-secondary;
+    font-size: $Title;
+    color: $color-tertiary;
+  }
 }
