--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,163 +1,145 @@
-@import '../Abstracts/Variables.scss';
-@import '../Abstracts/Mixins.scss';
-
+@import "../Abstracts/Variables.scss";
+@import "../Abstracts/Mixins.scss";
 
 .aboutMe {
+  grid-column: 1/-1;
+  grid-row: 2/3;
+  display: grid;
+  grid-template-rows: $header-height max-content max-content $footer-height;
+  width: 100vw;
+
+  &_Title {
     grid-column: 1/-1;
+    grid-row: 1/2;
+    justify-self: center;
+    font-family: $font-secondary;
+    font-size: $Title;
+    color: $color-tertiary;
+  }
+
+  &_Options {
+    font-family: $font-tertiary;
     grid-row: 2/3;
     display: grid;
-    grid-template-rows: $header-height max-content max-content $footer-height;
-    width: 100vw;
+    grid-template-columns: 1fr 2fr 1fr;
+    align-items: center;
+    justify-items: center;
 
-    &_Title {
-        grid-column: 1/-1;
-        grid-row: 1/2;
-        justify-self: center;
-        font-family: $font-secondary;
-        font-size: $Title;
-        color: $color-tertiary;
+    @include respond(phone) {
+      grid-template-columns: 1fr 2fr;
     }
 
-    &_Options {
-        font-family: $font-tertiary;
-        grid-row: 2/3;
+    &-text {
+      grid-column: 1/2;
+      font-size: 1.3rem;
+
+      @include respond(phone) {
+        visibility: hidden;
+      }
+    }
+
+    &-select {
+      grid-column: 2/3;
+      position: relative;
+      width: 360px;
+      height: 100px;
+
+      @include respond(phone) {
+        grid-column: 1/3;
+      }
+    }
+
+    &_All {
+      display: flex;
+      z-index: 10;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 360px;
+      height: 100px;
+      justify-content: space-around;
+      align-items: center;
+
+      & button {
+        background-color: transparent;
+        border-style: solid;
+        border-width: 3px;
+        border-color: #ff4d00a9;
+        width: 28px;
+        height: 28px;
+        z-index: 10;
+        cursor: pointer;
+        border-radius: 20px;
         display: grid;
-        grid-template-columns: 1fr 2fr 1fr;
-        align-items: center;
-        justify-items: center;
-
-        @include respond(phone) {
-            grid-template-columns: 1fr 2fr;
-        }
-
-
-        &-text {
-            grid-column: 1/2;
-            font-size: 1.3rem;
-
-            @include respond(phone) {
-                visibility: hidden;
-            }
-        }
-
-        &-select {
-            grid-column: 2/3;
-            position: relative;
-            width: 360px;
-            height: 100px;
-
-            @include respond(phone) {
-                grid-column: 1/3;
-            }
-        }
-
-        &_All {
-            display: flex;
-            z-index: 10;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 360px;
-            height: 100px;
-            justify-content: space-around;
-            align-items: center;
-
-            & button {
-                background-color: transparent;
-                border-style: solid;
-                border-width: 3px;
-                border-color: #ff4d00a9;
-                width: 28px;
-                height: 28px;
-                z-index: 10;
-                cursor: pointer;
-                border-radius: 20px;
-                display: grid;
-                justify-content: center;
-                align-content: center;
-            }
-        }
-
-        &-B {
-            background-color: $color-secondary;
-            width: 6px;
-            height: 6px;
-            border-radius: 50%;
-        }
-
-        &-C {
-            background-color: $color-secondary;
-            width: 9px;
-            height: 9px;
-            border-radius: 50%;
-        }
-
-        &-D {
-            background-color: $color-secondary;
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-        }
-
-        &-name {
-            display: flex;
-            justify-content: space-around;
-            transform: translateY(-14px);
-
-            & span {
-                width: 80px;
-                text-align: center;
-                font-size: 1.6rem;
-                font-weight: 600;
-
-            }
-        }
-    }
-
-
-    &_Resume-Details {
-
-        grid-row: 3/4;
-        align-content: start;
-
-        display: grid;
-        grid-template-columns: repeat(3, 1fr) 7fr repeat(3, 1fr);
-
-        @include respond(phone) {
-            grid-template-columns: 0.5fr max-content 0.5fr 7fr 1fr;
-        }
-
-    }
-
-    &_Resume {
-
-        margin-top: 7rem;
-        grid-column: 2/3;
-        display: flex;
         justify-content: center;
-        flex-direction: column;
-
-
-
-
-
-
-
-
-
-
-
+        align-content: center;
+      }
     }
 
-    &_details {
-        grid-column: 4/5;
-        background: $blue-gradient-right;
-        padding: 15px;
-        border-radius: 15px;
-        margin-top: 7rem;
-
-
-        font-size: 1.5rem;
-
+    &-B {
+      background-color: $color-secondary;
+      width: 6px;
+      height: 6px;
+      border-radius: 50%;
     }
+
+    &-C {
+      background-color: $color-secondary;
+      width: 9px;
+      height: 9px;
+      border-radius: 50%;
+    }
+
+    &-D {
+      background-color: $color-secondary;
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+    }
+
+    &-name {
+      display: flex;
+      justify-content: space-around;
+      transform: translateY(-14px);
+
+      & span {
+        width: 80px;
+        text-align: center;
+        font-size: 1.6rem;
+        font-weight: 600;
+      }
+    }
+  }
+
+  &_Resume-Details {
+    grid-row: 3/4;
+    align-content: start;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr) 7fr repeat(3, 1fr);
+
+    @include respond(phone) {
+      grid-template-columns: 0.5fr max-content 0.5fr 7fr 1fr;
+    }
+  }
+
+  &_Resume {
+    margin-top: 7rem;
+    grid-column: 2/3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  &_details {
+    grid-column: 4/5;
+    background: $blue-gradient-right;
+    padding: 15px;
+    border-radius: 15px;
+    margin-top: 7rem;
+    font-size: 1.5rem;
+    text-align: justify;
+    white-space: pre-line;
+  }
 }
