--- a/src/components/Header/Hello.scss
+++ b/src/components/Header/Hello.scss
@@ -37,8 +37,7 @@
     font-weight: 700;
     height: 60%;
     max-height: 20rem;
-    width: 60%;
-
+    width: 40rem;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -49,6 +48,7 @@
 
     @include respond("phone") {
       font-size: 3rem;
+      width: 25rem;
     }
   }
 }
