--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -83,6 +83,14 @@
     width: 100%;
     height: 100%;
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    background-color: $color-grey-light-1;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.4rem;
+    padding: 3rem;
+    font-family: $font-bold-curve;
 
     &-Container {
       width: 100%;
@@ -101,25 +109,28 @@
   }
 
   &-Details {
-    margin: 3rem 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 23rem;
 
-    & li {
-      list-style: none;
+    & div {
+      font-size: 1.88rem;
+      text-decoration: underline;
+      text-decoration-thickness: 1px;
       text-align: center;
-      font-size: 2rem;
-      padding: 0.6rem;
-
-      &:not(:last-child) {
-        border-bottom: 1px solid rgba($color-grey-light-2, 0.2);
-      }
+      text-underline-offset: 0.5rem;
+      line-height: 3.4rem;
+      text-decoration-color: #ffffff3d;
+      width: 22rem;
     }
   }
 
   &-About {
-    margin: 4rem 4rem;
-    font-size: 1.4rem;
-    line-height: 1.7;
-    text-align: center;
+    margin: 3rem 3rem 5rem 3rem;
+    font-size: 1.5rem;
+    line-height: 2.5rem;
+    text-align: justify;
   }
 
   &-Button {
